<resources>
    <string name="app_name">A5pma</string>
    <string name="city">City</string>
    <string name="forecast">Forecast</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="language">Language</string>
    <string name="units">Units</string>
    <string name="time">Time</string>
    <string name="summary">Summary</string>
    <string name="temperature">Temperature</string>
    <string name="splash_logo">Splash logo</string>
    <string name="background">Background image</string>
    <string name="saved">Settings was saved</string>
    <string name="city_network_error">No connection, city was not updated.</string>
    <string name="no_internet_label">For forecast please connect to internet and update "Internet" in settings.</string>
    <string name="refresh_network">Refresh internet.</string>
    <string name="network_online">Device is connected to internet.</string>
    <string name="network_offline">Unable to get connection</string>
</resources>
